# libexecstd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: get_gtest.cmake
include/: builder.hpp  context.hpp
include/backend/: cpu.hpp  cpulinux.hpp  cpuwin.hpp
include/devices/: cpudevice.hpp  device.hpp
include/execstd/backend/: cpuwin.hpp
include/execstd/core/: builder.hpp  compiler.hpp  context.hpp  core.hpp  export.hpp
include/execstd/devices/: cpudevice.hpp  cudadevice.hpp  device.hpp
include/execstd/runtime/: accelerator.hpp  builder.hpp  context.hpp
include/execstd/util/: compare.hpp  index.hpp  simple_index.hpp
src/: builder.cpp  context.cpp
src/backend/: CMakeLists.txt  cpuwin.cpp
src/core/: CMakeLists.txt  builder.cpp  context.cpp  core.cpp
src/cuda/: CMakeLists.txt  cuda_util.hpp  device_info.cu  device_info.hpp
src/devices/: CMakeLists.txt  device.cpp
src/runtime/: accelerator.cpp  builder.cpp  context.cpp
src/util/: index.cpp  simple_index.cpp
tests/: CMakeLists.txt  tests.cpp  util_compare.cpp  util_index.cpp
